--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
   @apply flex items-center gap-6 border-2 border-primary px-4 py-1 rounded-lg text-xs;
 }
 .slider-arrow {
-  @apply absolute top-1/2 text-xl text-white z-10 cursor-pointer select-none;
+  @apply absolute top-[45%] text-xl text-primary z-10 cursor-pointer select-none;
 }
 
 @tailwind utilities;
