Fixed Nextjs Image src undefined. Opinions clean code to get the star reviews. RoomsSection component builded according to the figma file

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,9 @@
 .slider-arrow {
   @apply absolute top-[45%] text-xl text-primary z-10 cursor-pointer select-none;
 }
-
+.rounded-button {
+  @apply rounded-full border border-gray-400 w-3 h-3;
+}
 @tailwind utilities;
 
 .sliderContainer {
