--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
   @apply absolute top-[45%] text-xl text-primary z-10 cursor-pointer select-none;
 }
 .rounded-button {
-  @apply rounded-full border border-gray-400 w-3 h-3;
+  @apply rounded-full border border-gray-400 w-3 h-3 transition ease-in-out delay-150;
 }
 @tailwind utilities;
 
