--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,11 @@
 .sliderCards {
   scroll-snap-align: center;
 }
+.button-gradient {
+  background: rgb(46, 196, 182);
+  background: linear-gradient(
+    90deg,
+    rgba(46, 196, 182, 1) 0%,
+    rgba(65, 51, 255, 1) 100%
+  );
+}
