--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,3 +28,8 @@
     rgba(65, 51, 255, 1) 100%
   );
 }
+.tab-shadow {
+  box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.75);
+}
